--- a/.github/actions/hello-world/action.yml
+++ b/.github/actions/hello-world/action.yml
@@ -2,6 +2,21 @@ name: "my hello action"
 
 description: "to say hello with GitHub Actions and investigate Github Actions creation in Docker"
 
+inputs:
+  firstGreeting:
+    description: "who you like to greet in the console"
+    required: true
+    default: "Hubot"
+    
+  secondGreeting:
+    description: "another person to greet"
+    required: false
+    default: "Mona the Octocat"
+    
+  thirdGreeting:
+    description: "a third greeting"
+    required: false
+
 runs: 
   using: "docker"
   image: "Dockerfile"
