--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,21 +1,16 @@
-# This is a basic workflow to help you get started with Actions
+# name: Docker Actions
 
-name: CI
+# on: [push]
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ master ]
+# jobs:
+#   action:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  action:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: hello-action
-        uses: ./.github/actions/hello-world
-        with:
-          firstGreeting: "Learning Lab User"
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v1
+
+#     - name: hello-action
+#       uses: ./.github/actions/hello-world
+#       with:
+#         firstGreeting: "Learning Lab User"
